<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/appointment_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/appointment_icon"
        android:title="Appointment" />
    <item
        android:id="@+id/medication_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/pill"
        android:title="Medication" />
    <item
        android:id="@+id/device_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/device_icon"
        android:title="Device" />
    <item
        android:id="@+id/record_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/record_icon"
        android:title="Record" />
    <item
        android:id="@+id/report_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/record_icon"
        android:title="Report" />

    <!-- TODO:: THIS LOGOUT IS TEMPORARY FOR TESTING ONLY    -->
<!--    <item-->
<!--        android:id="@+id/temp_logout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:icon="@drawable/logout_icon"-->
<!--        android:title="Logout" />-->
</menu>